@@ -1,7 +1,7 @@
 <!DOCTYPE beans PUBLIC "-//SPRING//DTD BEAN//EN" "http://www.springframework.org/dtd/spring-beans.dtd">
 <beans>
 	<bean id="manager" class="edu.mcw.rgd.dataload.ImportManager">
-        <property name="version" value="PhenotypeAnnotation pipeline  -- version 2022-01-05" />
+        <property name="version" value="PhenotypeAnnotation pipeline  -- build Oct 03, 2022" />
 	</bean>
 
     <bean id="mgiPhenotype" class="edu.mcw.rgd.dataload.MGIPhenotypeImporter">
